vertical align and height fix

--- a/components/layout.css
+++ b/components/layout.css
@@ -580,14 +580,17 @@ h2 {
 	height:90%;
 	position: absolute;
 	top: 0; left: 0; bottom: 0; right: 0;
+	display: flex;
+    align-items: center;
 }
 #example2 {
 	background-image: url(../components/art/example2.png);
-	min-width:1500px;
-	width:100%;
 	background-size: cover;
 	background-repeat:no-repeat;
 	background-position: left center;
+	min-width:300%;
+	width:100%;
+	height: 30vw;
 }
 
 
